--- a/notebooks/index.org
+++ b/notebooks/index.org
@@ -25,26 +25,10 @@ Knuth作のSATソルバーや関連するプログラムは，以下に置かれ
   - [[http://bach.istc.kobe-u.ac.jp/lect/taocp-sat/install-knuth.html][Knuth版SATソルバーのインストール]]
 
 ** Knuth版プログラムの利用方法
-Scala kernelからの実行のため，まず以下の関数を定義する．
-#+BEGIN_SRC scala
-import scala.sys.process.Process
-object bash {
-  def !(cmd: String): Int = Process(Seq("bash", "-c", cmd)).!
-  def !!(cmd: String): String = Process(Seq("bash", "-c", cmd)).!!
-}
-#+END_SRC
 
-すると以下のようにして様々なプログラムを実行できる．
-#+BEGIN_SRC scala
-bash ! "sat13 help"
-#+END_SRC
-
-ここではKnuth作のSATソルバー sat13 を実行している (不正なオプション =help= を指定している)．
-=bash != の後ろの文字列が，実行するbashのコマンドである．
-
-まず，教科書4ページの式(6) [[../prog/rivest-sat.sat][rivest-sat.sat]] に対して実行してみる．
-#+BEGIN_SRC scala
-bash ! "sat13 < ~/prog/rivest-unsat.sat"
+まず，教科書4ページの式(6) [[../prog/rivest-sat.sat][rivest-sat.sat]] に対してKnuth作のSATソルバー sat13 を実行してみる．
+#+BEGIN_SRC bash
+sat13 < ~/prog/rivest-unsat.sat
 #+END_SRC
 
 以下のような出力結果が得られるはずだ．
@@ -55,7 +39,6 @@ Altogether 301+670 mems, 5804 bytes, 3 nodes, 3 clauses learned (ave 1.3->1.3), 
 (2 clauses were subsumed on-the-fly.)
 (1 restart.)
 ~
-res: Int = 0
 #+END_EXAMPLE
 
   - 充足不能を表す "=~=" の行は標準出力に，その他はピンク色の背景の標準エラーに出力されている．
@@ -70,7 +53,7 @@ res: Int = 0
 
 次に，教科書4ページの式(7) [[../prog/rivest-sat.sat][rivest-sat.sat]] に対しても同様に実行してみる．
 #+BEGIN_SRC scala
-bash ! "sat13 < ~/prog/rivest-sat.sat"
+sat13 < ~/prog/rivest-sat.sat
 #+END_SRC
 
   - 解の値割当てを表す "=3 ~1 2 4=" 以外の行は，標準エラーに出力されている．
