--- a/notebooks/index.org
+++ b/notebooks/index.org
@@ -52,7 +52,7 @@ Altogether 301+670 mems, 5804 bytes, 3 nodes, 3 clauses learned (ave 1.3->1.3), 
   - その他については，sat13.pdf中の説明や教科書中の説明を参照すること．
 
 次に，教科書4ページの式(7) [[../prog/rivest-sat.sat][rivest-sat.sat]] に対しても同様に実行してみる．
-#+BEGIN_SRC scala
+#+BEGIN_SRC bash
 sat13 < ~/prog/rivest-sat.sat
 #+END_SRC
 
