modified:   notebooks/01A-a_simple_example.org 	modified:   notebooks/01B-exact_covering.org 	modified:   notebooks/01C-coloring_a_graph.org 	modified:   notebooks/index.org

--- a/notebooks/01C-coloring_a_graph.org
+++ b/notebooks/01C-coloring_a_graph.org
@@ -3,6 +3,11 @@
 
 * グラフ彩色 (Coloring a graph)
 
+まず prog フォルダに移動する．
+#+BEGIN_SRC bash
+cd ~/prog
+#+END_SRC
+
 10次のMcGregorグラフを4彩色するには以下のようにする．
 #+BEGIN_SRC bash
 mcgregor-graph 10
