--- a/notebooks/01A-a_simple_example.org
+++ b/notebooks/01A-a_simple_example.org
@@ -3,10 +3,15 @@
 
 * 簡単な例 (A simple example)
 
+まず prog フォルダに移動する．
+#+BEGIN_SRC bash
+cd ~/prog
+#+END_SRC
+
 $\textit{waerden}(3,3;9)$ が充足不能 (unsat)であることを，
 入力ファイル [[../prog/waerden-3-3-9.sat][waerden-3-3-9.sat]] を用いて確かめる．
 #+BEGIN_SRC bash
-sat13 < ~/prog/waerden-3-3-9.sat
+sat13 < waerden-3-3-9.sat
 #+END_SRC
 
 $\textit{waerden}(j,k;n)$ のCNF式を出力するプログラムは [[../knuth/pdf/sat-waerden.pdf][sat-waerden]] である．
@@ -17,5 +22,10 @@ sat-waerden 3 3 8
 bashのパイプ (~|~)を用いて，以下のようにすれば sat13 の入力として与えることができる．
 #+BEGIN_SRC bash
 sat-waerden 3 3 8 | sat13
+#+END_SRC
+
+Scala版のプログラムを利用する場合は以下のようになる．
+#+BEGIN_SRC bash
+./taocpsat waerden 3 3 8 | sat13
 #+END_SRC
 
