--- a/notebooks/01B-exact_covering.org
+++ b/notebooks/01B-exact_covering.org
@@ -3,6 +3,11 @@
 
 * 厳密被覆 (Exact covering)
 
+まず prog フォルダに移動する．
+#+BEGIN_SRC bash
+cd ~/prog
+#+END_SRC
+
 $\textit{langford}(n)$ の厳密被覆問題を出力するプログラムは [[../knuth/pdf/langford.pdf][langford]] である．
 #+BEGIN_SRC bash
 langford 3
