--- a/notebooks/01C-coloring_a_graph.org
+++ b/notebooks/01C-coloring_a_graph.org
@@ -20,12 +20,12 @@ mcgregor-graph 10
 sat-color mcgregor10.gb 4 | sat13 | tr " " "\n" | grep -v '^~' | sort -n
 #+END_SRC
 
-10次のMcGregorグラフの4彩色で色4が7回以下の彩色を求める．
+10次のMcGregorグラフの4彩色で色1が7回以下の彩色を求める．
 #+BEGIN_SRC bash
 mcgregor-graph 10
 sat-color mcgregor10.gb 4 > /tmp/mcg10.sat
 sat-threshold-sinz-graphs 110 7 mcgregor10.gb 1 > /tmp/mcg10le7.sat
-cat /tmp/mcg10.sat /tmp/mcg10le7.sat | sat13
+cat /tmp/mcg10.sat /tmp/mcg10le7.sat | sat13 | tr " " "\n" | grep -v '^[~S]' | grep '\.1$'
 #+END_SRC
 
 
